--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://amrelsayed59.github.io/Yeshtery",
+  "homepage":"https://amrelsayed59.github.io/Yeshtery/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -29,6 +29,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
